fix collapse

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -91,3 +91,6 @@ body {
     font-size: 9px;
     color: #4a4a4a;
 }
+.container {
+    width: 970px !important;
+}
